--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>htmlcss-struttura-wp</title>
 </head>
@@ -11,7 +14,21 @@
 
     <div class="container">
 
-        <header></header>
+        <header>
+            <div class="logo">
+                <img src="img/logo.png" alt="logo neori">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">features</a></li>
+                    <li><a href="#">editorials</a></li>
+                    <li><a href="#">environment</a></li>
+                    <li><a href="#">blog</a></li>
+                    <li><a href="#">shop</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <main>
             <section class="background"></section>
