--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         </header>
 
         <main>
-            <section class="background"></section>
+            <section class="hero">
+                <div>
+                    <h1>Pretium ac placerat dui interdum nunc in eros urna orbi</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos reiciendis accusantium consectetur similique aperiam nobis molestiae aspernatur odit et.</p>
+                </div>
+            </section>
             <section class="background-lb clearflix">
                 <div></div> <!-- parte alta della sezione -->
                 <div class="float-lf"></div> <!-- parte sinistra della sezione -->
