completa il main ed il footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>htmlcss-struttura-wp</title>
 </head>
@@ -31,21 +32,54 @@
         </header>
 
         <main>
+
             <section class="hero">
                 <div>
-                    <h1>Pretium ac placerat dui interdum nunc in eros urna orbi</h1>
+                    <h2>Pretium ac placerat dui interdum nunc in eros urna orbi</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos reiciendis accusantium consectetur similique aperiam nobis molestiae aspernatur odit et.</p>
                 </div>
             </section>
-            <section class="background-lb clearflix">
-                <div></div> <!-- parte alta della sezione -->
-                <div class="float-lf"></div> <!-- parte sinistra della sezione -->
-                <div class="float-c"></div> <!-- parte centrale della sezione -->
-                <div class="float-rh"></div> <!-- parte destra della sezione -->
+
+            <section class="leadership clearflix">
+                <div class="leadership-up"> <!-- parte alta della sezione -->
+                    <h1>Leadership</h1>
+                    <p>Ferterum urna a libero tempus</p>
+                </div> 
+                <div class="float-lf"><!-- parte sinistra della sezione -->
+                    <div class="bg-image">
+                        <div class="layover"></div> 
+                    </div>
+                    <div>
+                        <h4>Lorem</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum, sed! Nostrum quam possimus consequatur error cum aliquam? </p>
+                    </div>
+
+                </div>
+                <div class="float-c"><!-- parte centrale della sezione -->
+                    <div class="bg-image">
+                        <div class="layover"></div>           
+                    </div>
+                    <div>
+                        <h4>Lorem</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptas dicta optio qui culpa vero hic aliquam repudiandae id quae?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptas dicta optio qui culpa vero hic aliquam repudiandae id quae?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptas dicta optio qui culpa vero hic aliquam repudiandae id quae?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptas dicta optio qui culpa vero hic aliquam repudiandae id quae?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptas dicta optio qui culpa vero hic aliquam repudiandae id quae?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptas dicta optio qui culpa vero hic aliquam repudiandae id quae?</p>
+                    </div>
+                </div> 
+                <div class="float-rg"><!-- parte destra della sezione -->
+                    <div class="bg-image">
+                        <div class="layover"></div> 
+                    </div>
+                    <div>
+                        <h4>Lorem</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum, sed! Nostrum quam possimus consequatur error cum aliquam? Quaerat perspiciatis voluptate, pariatur  ipsa tempora obcaecati.</p>
+                    </div>
+
+                </div> 
             </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <span>Designed with </span>
+        </footer>
 
     </div>
     
